new: cards design with gradient

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -7,13 +7,49 @@
     <title>{{title}}</title>
     <meta name="description" itemprop="description" content="{{description}}" />
     <meta name="keywords" itemprop="keywords" content="{{keywords}}" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104194-41"></script>
-    <script>
-      window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-104194-41');
-    </script>
   </head>
 
   <body>
+
+    <div class="container">
+
+      <div class="card card-example-1">
+        <div class="card-bg">
+          <div class="card-bg-shadow card-bg-shadow-one"></div>
+          <div class="card-bg-shadow card-bg-shadow-two"></div>
+          <div class="card-bg-shadow card-bg-shadow-three"></div>
+          <div class="card-bg-shadow card-bg-shadow-four"></div>
+        </div>
+      </div>
+
+      <div class="card card-example-2">
+        <div class="card-bg">
+          <div class="card-bg-shadow card-bg-shadow-one"></div>
+          <div class="card-bg-shadow card-bg-shadow-two"></div>
+          <div class="card-bg-shadow card-bg-shadow-three"></div>
+          <div class="card-bg-shadow card-bg-shadow-four"></div>
+        </div>
+      </div>
+
+      <div class="card card-example-3">
+        <div class="card-bg">
+          <div class="card-bg-shadow card-bg-shadow-one"></div>
+          <div class="card-bg-shadow card-bg-shadow-two"></div>
+          <div class="card-bg-shadow card-bg-shadow-three"></div>
+          <div class="card-bg-shadow card-bg-shadow-four"></div>
+        </div>
+      </div>
+
+      <div class="card card-example-4">
+        <div class="card-bg">
+          <div class="card-bg-shadow card-bg-shadow-one"></div>
+          <div class="card-bg-shadow card-bg-shadow-two"></div>
+          <div class="card-bg-shadow card-bg-shadow-three"></div>
+          <div class="card-bg-shadow card-bg-shadow-four"></div>
+        </div>
+      </div>
+
+    </div>
 
   </body>
 </html>
